--- a/canvas/estilo.css
+++ b/canvas/estilo.css
@@ -3,13 +3,26 @@
 
 }
 #containerJogo{
-    width: 410px;
+    width: 810px;
     margin: 2px auto;
 
+}
+#pontuacao{
+    width: 180px;
+    height: auto;
+    font-size: 20px;
+    float: left;
+}
+#msg{
+    width: 180px;
+    height: auto;
+    font-size: 20px;
+    float: right;
 }
 
 #game{
     border: 3px solid;
+    margin-left: 30px;
 
 }
 
